<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ParcelleApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="erreur_de_suppression_de_table_dans_la_base_de_donn_es">Erreur de suppression de table dans la base de données</string>
    <string name="erreur_de_creation_dans_la_base_de_donn_es">Erreur de creation dans la base de données</string>
    <string name="erreur_de_connexion_avec_la_base_de_donn_es">Erreur de connexion avec la Base de données</string>
    <string name="title_activity_plot_detail">PlotDetail</string>
    <string name="title_activity_plot_details">PlotDetailsActivity</string>
    <string name="growingTitle">Culture : </string>
    <string name="growingLastTitle">Culture précédente : </string>
    <string name="surface">Surface : </string>
    <string name="plotImage">plotImage</string>
    <string name="plotimage">PlotImage</string>
    <string name="title_activity_plot_add">PlotAddActivity</string>
    <string name="ajouter_parcelle">Ajouter Parcelle</string>
    <string name="nom_">Nom :</string>
    <string name="culture_">Culture :</string>
    <string name="culture_pr_c_dente_">Culture précédente :</string>
    <string name="surface_">Surface :</string>
    <string name="ajouter">Ajouter</string>
    <string name="parcelleapp">ParcelleApp</string>
    <string name="le_nom_n_est_pas_renseign_">Le nom n\'est pas renseigné</string>
    <string name="ajout_de_la_nouvelle_parcelle">Ajout de la nouvelle parcelle</string>
    <string name="flecheImage">Fleche Image</string>
    <string name="erreur_pendant_le_chargement">Erreur pendant le chargement de la liste des parcelles</string>
    <string name="la_base_de_donnees_est_vide">La base de données est vide</string>
    <string name="parcelles">Parcelles</string>
    <string name="convertisseurs">Convertisseurs</string>
    <string name="commande">Commande</string>
    <string name="ctrle">Contrôle</string>
    <string name="menu">Menu</string>
    <string name="title_activity_plot_converter">PlotConverterActivity</string>
    <string name="densite_de_semis">"Densité de semis : "</string>
    <string name="grainsm2">" grains/m²"</string>
    <string name="pmg_">PMG :</string>
    <string name="_g">" g"</string>
    <string name="poids_de_semences_necessaires">Poids de semences nécessaires :</string>
    <string name="constante_resultat">Resultat</string>
    <string name="constante_desactiver">Desactiver</string>
    <string name="kg_ha">" Kg/ha"</string>
    <string name="title_activity_plot_order">PlotOrderActivity</string>
    <string name="nombre_a_commander">Nombre à commander :</string>
    <string name="sacs">" sacs"</string>
    <string name="controle">Contrôle</string>
    <string name="ha">" ha"</string>
    <string name="conditionnement">Conditionnement :</string>
    <string name="kg_sacs">" kg/sacs"</string>
    <string name="resultatconvertervalue">ResultatConverterValue</string>
    <string name="nom_context">"Nom : "</string>
    <string name="hectares">hectares</string>
    <string name="_hectares">" hectares"</string>
    <string name="title_activity_plot_control">PlotControlActivity</string>
    <string name="ecartement_">Ecartement :</string>
    <string name="nombre_de_rangs_m2">Nombre de rangs/m²</string>
    <string name="rangs_m2">rangs/m²</string>
    <string name="nombre_de_grains_m2">Nombre de grains/m²</string>
    <string name="grains_m2">grains/m²</string>
    <string name="densiysemisvalue">densiySemisValue</string>
    <string name="adresse">Adresse :</string>
    <string name="location">location</string>
    <string name="impossible_de_geolocaliser">Impossible de géolocaliser</string>
    <string name="prendre_une_photo">Prendre une photo</string>
    <string name="apercu">Aperçu</string>
    <string name="addphoto">addPhoto</string>
    <string name="title_activity_plot_camera">PlotCameraActivity</string>
    <string name="capture">Capture</string>
    <string name="camera_not_found">Camera not found</string>
    <string name="camera_unavailable">Camera unavailable</string>
    <string name="error_setting_camera_preview">Error setting camera preview</string>
    <string name="error_starting_camera_preview">Error starting camera preview</string>
    <string name="file_not_found">File not found</string>
    <string name="error_accessing_file">Error accessing file</string>
    <string name="image_saved">"Image saved "</string>
    <string name="picturefile">pictureFile</string>
    <string name="apercu_libelle">Preview</string>

</resources>
