<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	 <item
        android:id="@+id/action_menu"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu">
        <menu>
            <item
                android:id="@+id/action_parcelles"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/parcelles"/>
            <item
                android:id="@+id/action_convertisseur"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/convertisseurs"/>
            <item
                android:id="@+id/action_controle"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/ctrle"/>
        </menu>
    </item>

</menu>
