<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlotConverterActivity" >

    <EditText
        android:id="@+id/densityVal"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:ems="10" 
        android:layout_centerInParent="true" 
        android:inputType="number"
        android:maxLength="9"/>

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/densityVal"
        android:layout_marginTop="21dp"
        android:textSize="16sp"
        android:text="@string/pmg_" />

    <EditText
        android:id="@+id/ecartementVal"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/densityVal"
        android:layout_below="@+id/TextView02"
        android:ems="10"
        android:inputType="number" 
        android:maxLength="9"/>

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ecartementVal"
        android:textSize="14sp"
        android:layout_alignLeft="@+id/TextView01"
        android:text="@string/_g" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="51dp"
        android:textSize="16sp"
        android:text="@string/densite_de_semis" />

    <TextView
        android:id="@+id/resultat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView04"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/btn_order"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/TextView04"
        android:layout_marginBottom="41dp"
        android:text="@string/commande" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView02"
        android:layout_toRightOf="@+id/densityVal"
        android:text="@string/grainsm2"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ecartementVal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/poids_de_semences_necessaires"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/unite_resultat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/resultat"
        android:layout_alignBottom="@+id/resultat"
        android:layout_marginLeft="14sp"
        android:layout_toRightOf="@+id/resultat"
        android:text="@string/kg_ha" />

</RelativeLayout>