<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlotDetailsActivity" >

    <TextView
        android:id="@+id/PlotName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp" 
        android:textSize="35sp"/>

    <ImageView
        android:id="@+id/ImagePlot"
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/plotimage"
        android:src="@drawable/autre" />

    <LinearLayout
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:layout_margin="5sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_margin="5sp">

            <TextView
                android:id="@+id/PlotGrowingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/growingTitle"
                android:textSize="16sp" 
                android:layout_margin="5sp"/>

            <TextView
                android:id="@+id/PlotGrowingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" 
                android:textSize="14sp"
                android:layout_margin="5sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_margin="5sp">

            <TextView
                android:id="@+id/PlotLastGrowingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/growingLastTitle" 
                android:textSize="16sp"
                android:layout_margin="5sp"/>

            <TextView
                android:id="@+id/PlotLastGrowingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" 
                android:textSize="14sp"
                android:layout_margin="5sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_margin="5sp">

            <TextView
                android:id="@+id/PlotSurfaceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surface"
                android:textSize="16sp" 
                android:layout_margin="5sp"/>

            <TextView
                android:id="@+id/PlotSurfaceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" 
                android:textSize="14sp"
                android:layout_margin="5sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>